--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://satisfymath.github.io/test-app",
+  "homepage": "https://satisfymath.github.io/test-app/build",
   "dependencies": {
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
